update code from the data generator

--- a/data_generator.ipynb
+++ b/data_generator.ipynb
@@ -34,14 +34,42 @@
     "\n",
     "client = OpenAI()\n",
     "\n",
-    "def generate_diagnosis():\n",
-    "    system_message = \"\"\"\n",
+    "system_message = \"\"\"\n",
     "    Generate a detailed and technical medical diagnosis that incorporates specific medical terminology, conditions, and potential implications. The diagnosis should be presented as if it were being documented by a specialist for review by other healthcare professionals, emphasizing the complexity of the patient's condition. Include relevant medical details such as the specific disease or disorder, underlying causes, symptoms, and any pertinent test results or findings. The diagnosis should be comprehensive enough to cover potential differential diagnoses and highlight the complexity of the medical decision-making process. Each request should produce a unique diagnosis, focusing on a different medical condition or scenario.\n",
     "    \"\"\"\n",
     "    \n",
-    "    system_message_simplify = \"\"\"\n",
-    "    Translate the provided complex medical diagnosis into a simplified short explanation that is easily understandable by someone without a medical background. Use clear, straightforward language and avoid medical jargon. Break down the diagnosis into its basic components, explaining the condition, what causes it, the typical symptoms, and possible treatment options or next steps in layman's terms. Aim to educate the reader about the condition in a concise and reassuring manner, ensuring they grasp the essence of the diagnosis, its potential impact, and how it can be managed or treated. Each explanation should be empathetic and supportive, offering clarity and comfort to those unfamiliar with medical terminology.\n",
-    "    \"\"\"\n",
+    "system_message_simplify = \"\"\"\n",
+    "Translate the provided complex medical diagnosis into a simplified short explanation that is easily understandable by someone without a medical background. Use clear, straightforward language and avoid medical jargon. Break down the diagnosis into its basic components, explaining the condition, what causes it, the typical symptoms, and possible treatment options or next steps in layman's terms. Aim to educate the reader about the condition in a concise and reassuring manner, ensuring they grasp the essence of the diagnosis, its potential impact, and how it can be managed or treated. Each explanation should be empathetic and supportive, offering clarity and comfort to those unfamiliar with medical terminology.\n",
+    "\"\"\"\n",
+    "\n",
+    "def generate_text(use_case):\n",
+    "    completion = client.chat.completions.create(\n",
+    "        model=\"gpt-4-0125-preview\",\n",
+    "        temperature=1.2,\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": system_message},\n",
+    "            {\"role\": \"user\", \"content\": use_case},\n",
+    "        ],\n",
+    "        max_tokens=2000, \n",
+    "    )\n",
+    "    \n",
+    "    diagnosis = completion.choices[0].message.content\n",
+    "    \n",
+    "    completion = client.chat.completions.create(\n",
+    "        model=\"gpt-4-0125-preview\",\n",
+    "        temperature=1.2,\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": system_message_simplify},\n",
+    "            {\"role\": \"user\", \"content\": diagnosis},\n",
+    "        ],\n",
+    "        max_tokens=2000, \n",
+    "    )\n",
+    "    \n",
+    "    simplified_diagnosis = completion.choices[0].message.content\n",
+    "    return diagnosis, simplified_diagnosis\n",
+    "\n",
+    "def generate_diagnosis():\n",
+    "    \n",
     "    \n",
     "    user_messages = [\n",
     "        \"Generate a complex diagnosis for a patient presenting with chronic abdominal pain and weight loss, including possible rare conditions.\",\n",
@@ -132,31 +160,8 @@
     "        \"Generate a diagnosis for a patient presenting with thickened skin, tightness around the mouth, and Raynaud's phenomenon, focusing on scleroderma.\"\n",
     "    ]\n",
     "    \n",
-    "    completion = client.chat.completions.create(\n",
-    "        model=\"gpt-4-0125-preview\",\n",
-    "        temperature=1.2,\n",
-    "        messages=[\n",
-    "            {\"role\": \"system\", \"content\": system_message},\n",
-    "            {\"role\": \"user\", \"content\": random.choice(user_messages)},\n",
-    "        ],\n",
-    "        max_tokens=2000, \n",
-    "    )\n",
     "    \n",
-    "    diagnosis = completion.choices[0].message.content\n",
-    "    \n",
-    "    completion = client.chat.completions.create(\n",
-    "        model=\"gpt-4-0125-preview\",\n",
-    "        temperature=1.2,\n",
-    "        messages=[\n",
-    "            {\"role\": \"system\", \"content\": system_message_simplify},\n",
-    "            {\"role\": \"user\", \"content\": diagnosis},\n",
-    "        ],\n",
-    "        max_tokens=2000, \n",
-    "    )\n",
-    "    \n",
-    "    simplified_diagnosis = completion.choices[0].message.content\n",
-    "    \n",
-    "    return diagnosis, simplified_diagnosis\n"
+    "    return generate_text(random.choice(user_messages))"
    ],
    "metadata": {
     "collapsed": false
@@ -200,11 +205,25 @@
   {
    "cell_type": "code",
    "outputs": [],
+   "source": [
+    "example_diagnosis, _ = generate_text(\"Generate a diagnosis for a patient presenting with chronic abdominal pain and weight loss.\")\n",
+    "\n",
+    "print(example_diagnosis)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fd0ed375be3709e8",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "fd0ed375be3709e8"
+   "id": "b394c6ec83151d29"
   }
  ],
  "metadata": {
