--- a/llms.ipynb
+++ b/llms.ipynb
@@ -367,9 +367,11 @@
     "\n",
     "    message = \"\"\n",
     "    for chunk in response:\n",
-    "        part = chunk[\"choices\"][0][\"message\"][\"content\"]\n",
-    "        message += part\n",
-    "        print(part, end=\"\")\n",
+    "        delta = chunk[\"choices\"][0][\"delta\"]\n",
+    "        if 'content' in delta:\n",
+    "          part = delta[\"content\"]\n",
+    "          message += part\n",
+    "          print(part, end=\"\")\n",
     "\n",
     "    current_messages.append({\n",
     "        \"role\": \"assistant\",\n",
