make new line in solution

--- a/llms.ipynb
+++ b/llms.ipynb
@@ -372,7 +372,7 @@
     "          part = delta[\"content\"]\n",
     "          message += part\n",
     "          print(part, end=\"\")\n",
-    "\n",
+    "    print()\n",
     "    current_messages.append({\n",
     "        \"role\": \"assistant\",\n",
     "        \"content\": message,\n",
