make space for exllamav2

--- a/llms.ipynb
+++ b/llms.ipynb
@@ -384,6 +384,18 @@
    "id": "7ac816855b548835"
   },
   {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "del mistral\n",
+    "del llama"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "749bc104f7356b01"
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# Exllamav2\n",
