remove bf16 support

--- a/finetuning.ipynb
+++ b/finetuning.ipynb
@@ -164,7 +164,7 @@
     "        gradient_checkpointing=True,\n",
     "        max_steps=1000,\n",
     "        learning_rate=2.5e-5, \n",
-    "        bf16=True,\n",
+    "        bf16=False,\n",
     "        optim=\"paged_adamw_8bit\",\n",
     "        logging_steps=50,            \n",
     "        logging_dir=\"./logs\",      \n",
