--- a/finetuning.ipynb
+++ b/finetuning.ipynb
@@ -187,6 +187,29 @@
    "execution_count": null
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Da das training sehr lange dauert, wird es hier abgebrochen. Und wir benutzen ein checkpoint den wir vorher gespeichert haben."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f16e2bf5719ce431"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "!curl -L \"https://file.io/ez5XKjM0PtFm\" -o checkpoint-500.zip\n",
+    "!unzip checkpoint-500.zip -d results/"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "42bbe67db25b9c24",
+   "execution_count": null
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
