remove parts of the code

--- a/finetuning.ipynb
+++ b/finetuning.ipynb
@@ -36,19 +36,7 @@
     "\n",
     "def load_dataset():\n",
     "    dataset = []\n",
-    "    for file in os.listdir(\"data/original\"):\n",
-    "        path_original = os.path.join(\"data/original\", file)\n",
-    "        path_simplified = os.path.join(\"data/simplified\", file)\n",
-    "        \n",
-    "        text = \"\"\n",
-    "        with open(path_original, \"r\") as f:\n",
-    "            text += \"REPORT:\\n\"\n",
-    "            text += f.read()\n",
-    "        \n",
-    "        with open(path_simplified, \"r\") as f:\n",
-    "            text += \"SUMMARY:\\n\"\n",
-    "            text += f.read()\n",
-    "        dataset.append(text)\n",
+    "    # TODO: Load the dataset into the \"dataset\" variable\n",
     "    \n",
     "    return dataset\n",
     "dataset = load_dataset()\n",
