--- a/llms.ipynb
+++ b/llms.ipynb
@@ -218,7 +218,6 @@
    "source": [
     "response = mistral(\n",
     "    \"Write me a poem about the technology of the future.\",\n",
-    "    max_tokens=512,\n",
     ")\n",
     "print(response[\"choices\"][0][\"text\"])"
    ],
@@ -342,41 +341,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "current_messages = [\n",
-    "    {\n",
-    "        \"role\": \"system\",\n",
-    "        \"content\": \"answer in the style of a pirate\",\n",
-    "    }\n",
-    "]\n",
-    "\n",
-    "while True:\n",
-    "    user_input = input(\"You: \")\n",
-    "    if user_input.lower() == \"exit\":\n",
-    "        break\n",
-    "\n",
-    "    current_messages.append({\n",
-    "        \"role\": \"user\",\n",
-    "        \"content\": user_input,\n",
-    "    })\n",
-    "\n",
-    "    response = mistral.create_chat_completion(\n",
-    "        current_messages,\n",
-    "        max_tokens=512,\n",
-    "        stream=True,\n",
-    "    )\n",
-    "\n",
-    "    message = \"\"\n",
-    "    for chunk in response:\n",
-    "        delta = chunk[\"choices\"][0][\"delta\"]\n",
-    "        if 'content' in delta:\n",
-    "          part = delta[\"content\"]\n",
-    "          message += part\n",
-    "          print(part, end=\"\")\n",
-    "    print()\n",
-    "    current_messages.append({\n",
-    "        \"role\": \"assistant\",\n",
-    "        \"content\": message,\n",
-    "    })"
+    "# TODO Streaming in Chatbot einbauen"
    ],
    "metadata": {
     "collapsed": false
