--- a/llms.ipynb
+++ b/llms.ipynb
@@ -479,6 +479,90 @@
     "collapsed": false
    },
    "id": "ff0c6bb969c96cc9"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Bilder als Eingabe verwenden"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "bd684bc80762e5b"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import hf_hub_download\n",
+    "\n",
+    "llava_path = hf_hub_download(repo_id=\"mys/ggml_llava-v1.5-7b\", filename=\"ggml-model-q4_k.gguf\")\n",
+    "mmproj_path = hf_hub_download(repo_id=\"mys/ggml_llava-v1.5-7b\", filename=\"mmproj-model-f16.gguf\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "87380913d5e12e19",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from llama_cpp.llama_chat_format import Llava15ChatHandler\n",
+    "from llama_cpp import Llama\n",
+    "import contextlib\n",
+    "\n",
+    "with contextlib.redirect_stdout(None), contextlib.redirect_stderr(None):\n",
+    "  chat_handler = Llava15ChatHandler(clip_model_path=mmproj_path)\n",
+    "llava = Llama(\n",
+    "    llava_path,\n",
+    "    chat_handler=chat_handler,\n",
+    "    n_ctx=2048,\n",
+    "    logits_all=True,\n",
+    "    n_gpu_layers=-1,\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6d4dbc19dd707430",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "with contextlib.redirect_stdout(None), contextlib.redirect_stderr(None):\n",
+    "  response = llava.create_chat_completion([\n",
+    "      {\"role\": \"system\", \"content\": \"You are an assistant who perfectly describes images.\"},\n",
+    "      {\n",
+    "          \"role\": \"user\",\n",
+    "          \"content\": [\n",
+    "              {\"type\": \"image_url\", \"image_url\":\n",
+    "                  {\"url\": \"https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png\"}\n",
+    "              },\n",
+    "              {\"type\": \"text\", \"text\": \"Describe this image in detail please.\"}\n",
+    "          ]\n",
+    "      },\n",
+    "  ])\n",
+    "\n",
+    "print(response[\"choices\"][0][\"message\"][\"content\"])"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fd9240cb7af9ff9f",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c41e5e6d94d40d93"
   }
  ],
  "metadata": {
